# AgroForesight

./: .gitignore  FRONTEND_GUIDE.md  api.md  main.py  pyproject.toml  test.py
Backend/: .dockerignore  Dockerfile  docker-compose.yml  main.py  structure.md
Backend/api/: deps.py
Backend/db/: session.py
Backend/repository/: farmer_repository.py  loan_repository.py  sacco_repository.py  season_repository.py
Backend/schemas/: risk.py
Backend/services/: exceptions.py  farmer_service.py  loan_service.py  sacco_service.py  season_service.py  security.py
Backend/tests/: test_auth.py  test_integration.py  test_saccos.py
Frontend/: .env  package-lock.json
api/: deps.py  risk_assessments.py
core/: config.py
db/: base.py  session.py
repository/: __init__.py  farm_repository.py  loan_repository.py  recommendation_repository.py  risk_assesment_repository.py  sacco_repository.py  season_repository.py  user_repository.py
schemas/: __init__.py  auth.py  farm.py  farmer.py  loan.py  recommendation.py  risk_analysis.py  risk_assesment.py  sacco.py  season.py
services/: __init__.py  auth_service.py  exceptions.py  farm_service.py  farmer_service.py  loan_service.py  recommendation_service.py  risk_assesment_service.py  risk_service.py  sacco_service.py  season_service.py  weather_service.py
tests/: conftest.py  test_farmers.py  test_farms.py  test_integration.py  test_llm.py  test_loans.py  test_recommendation_flow.py  test_recommendation_service.py  test_risk.py  test_riskflow.py  test_rules.py  test_seasons.py  test_validation_edges.py  test_weather.py
(+106 files in other folders)
